Date	Added

2007/01/03
	* Changed monster_class_change_full_recover to 'yes' (official) [ultramage]
2006/12/20
	* Fixed the meaning of stdout_with_ansisequence and changed the default 
	  value to no. [FlavioJS]
2006/12/18
	* Added hom_setting to specify which homunculus 'quirks' are in effect. The
	  default activates all of them, if you set them to 0 then homuncs will not
	  be treated in any special matter, pretty much like standard mobs. if I
	  missed any 'quirky' homunc behaviour from it, report it so it can be added
	  to the list (This setting was added to pet.conf).
	* flooritem_lifetime now accepts a much higher max value (previously it was
	  65k when the default was 60k)
	* Removed monster_ai 0x80 since it's now handled by hom_setting.
2006/12/12
	* Added monster_ai&0x400 to use the previous 'smart' criteria that prevents
	  mobs from fighting each another, since now they are all natural enemies
	  of each another. [Skotlex]
2006/11/29
	* Added Rachel Santuary to nomemo mapflags [Playtester]
2006/11/22
	* Added import/script_conf.txt to keep OnPCxxxxxEven settings [Lupus]
	* Modified slaves_inherit_speed (monster.conf): 0 never. 1 - when the
	  master can move. 2 - when the master can't move. 3 - always (default)
	* Also modified slaves_inherit_mode: 0 don't change mode. 1 slaves are
	  always aggressive. 2 slaves are always passive. 3 they copy the
	  agro/passive mode from their master. Defaults to 2.
2006/11/20
	* Added monster_ai&0x200 (monster.conf). When set, mob skill delays are
	  shared. That is, if the mob has several lines with the same skill, when the
	  skill is used, the delay will be set to all of them, not just the one entry
	  used. [Skotlex]
2006/11/07
	* Added nosave mapflag for Guild Dungeons [KarLaeda]
	* New Setting "stdout_with_ansisequence"
	  (login_athena/char_athena/map_athena) allows you to specify whether color
	  control chars should be printed or not. Is useful to disable for a