@@ -1,6 +1,7 @@
 Date	Added
 
 2007/01/03
+	* Changed friend_auto_add to 'yes' (closer to official, except for one detail)
 	* Changed monster_class_change_full_recover to 'yes' (official) [ultramage]
 2006/12/20
 	* Fixed the meaning of stdout_with_ansisequence and changed the default 
